Partial revert of r235376 https://bugs.webkit.org/show_bug.cgi?id=189011

For now revert the unit tests added in r235376 as the following tests are failing on Apple Sierra
Debug and Apple High Sierra Debug bots:

    lldb_webkit_unittest.TestSummaryProviders.serial_test_WTFOptionSetProvider_simple
    lldb_webkit_unittest.TestSummaryProviders.serial_test_WTFOptionSet_SummaryProvider_simple

Will investigate offline.

* lldb/lldbWebKitTester/main.cpp:
(testSummaryProviders):
* lldb/lldb_webkit_unittest.py:
(TestSummaryProviders.serial_test_WTFHashSet_tablesize_and_size):
(TestSummaryProviders.serial_test_WTFOptionSet_SummaryProvider_empty): Deleted.
(TestSummaryProviders.serial_test_WTFOptionSet_SummaryProvider_simple): Deleted.
(TestSummaryProviders.serial_test_WTFOptionSetProvider_empty): Deleted.
(TestSummaryProviders.serial_test_WTFOptionSetProvider_simple): Deleted.

Canonical link: https://commits.webkit.org/204058@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235404 268f45cc-cd09-0410-ab3c-d52691b4dbfc